string to url fix