@@ -13,12 +13,12 @@ public class Utils {
 	public static String USER_AGENT = "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/33.0.1750.152 Safari/537.36";
 
 	public static URL stringToURL(String url) throws ConnectionException {
+		url = url.trim();
 		URL targetURL = null;
 		try {
-			URI uri = new URI(url);
-			targetURL = uri.toURL();
-		} catch (URISyntaxException | MalformedURLException | IllegalArgumentException e) {
-			throw new ConnectionException("Incorrect url: " + url + ". \nError: " + e.toString());
+			targetURL = new URL(url);
+		} catch (MalformedURLException | IllegalArgumentException e) {
+			throw new ConnectionException("Incorrect url: '" + url + "': " + e.toString());
 		}
 
 		return targetURL;
